--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
+
+    <script
+      defer
+      src="%UMAMI_BASE_URL%/script.js"
+      data-website-id="%UMAMI_WEBSITE_ID%"
+    ></script>
+
     %sveltekit.head%
   </head>
 
