--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,8 @@
 
     <script
       defer
-      src="%UMAMI_BASE_URL%/script.js"
-      data-website-id="%UMAMI_WEBSITE_ID%"
+      src="%PUBLIC_UMAMI_BASE_URL%/script.js"
+      data-website-id="%PUBLIC_UMAMI_WEBSITE_ID%"
     ></script>
 
     %sveltekit.head%
