--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
+
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     %sveltekit.head%
   </head>
 
-  <body>
+  <body
+    data-sveltekit-preload-data="hover"
+    data-sveltekit-preload-code="viewport"
+  >
     <div>%sveltekit.body%</div>
   </body>
 </html>
