--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
 
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.png"
+    />
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+    />
 
     %sveltekit.head%
   </head>
