--- a/src/app.html
+++ b/src/app.html
@@ -13,16 +13,13 @@
     />
     <link
       rel="manifest"
-      href="/site.webmanifest"
+      href="%sveltekit.assets%/site.webmanifest"
     />
 
     %sveltekit.head%
   </head>
 
-  <body
-    data-sveltekit-preload-data="hover"
-    data-sveltekit-preload-code="viewport"
-  >
-    <div>%sveltekit.body%</div>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
